<resources>
    <string name="app_name">NotesApp</string>
    <string name="date_created">Note created: </string>
    <string name="date_modified">Last modified: </string>
    <string name="note_title_hint">Title</string>
    <string name="note_text_hint">Text</string>
    <string name="add_note_button">Save</string>
    <string name="back_to_list_button">All Notes</string>
    <string name="notes">Notes</string>


    <!--Icons-->
    <string name ="fa_trash_o">&#xf014;</string>
</resources>