<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".UpdateNoteActivity">

    <!--Top bar-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <!--Read all notes-->
        <Button
            android:id="@+id/idBtnReadAllNotesUpdate"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="start|center"
            android:layout_margin="5dp"
            android:text="@string/back_to_list_button"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:drawableLeft="@drawable/arrow_back_24"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/idTvDateModifiedUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/date_modified"
            android:textSize="12sp"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <!--Button to delete note-->
        <ImageButton
            android:id="@+id/idBtnDeleteNoteRv"
            android:src="@drawable/delete_24"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="0dp"/>

        <!--Button to update note-->
        <Button
            android:id="@+id/idBtnUpdateNote"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="end|center"
            android:layout_margin="5dp"
            android:text="@string/add_note_button"
            android:textAllCaps="false"
            android:textSize="12sp" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbarSize="20sp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">


            <!--EditText for note title-->
            <EditText
                android:id="@+id/idEdtTitleUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/note_title_hint"
                android:textSize="24sp" />


            <!--EditText for note text-->
            <EditText
                android:id="@+id/idEdtTextUpdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:hint="@string/note_text_hint"
                android:textSize="18sp" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>