<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AddNoteActivity">

    <!--Recommended to use sp instead of dp for text size-->
    <!--Top bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp"
        android:weightSum="3">

        <!--(Android Material Design Button Style Design | DigitalOcean, 2024). I didn't copy it directly but used the style widget -->
        <!--(Icons  |  Android Developers, 2024)-->
        <Button
            android:id="@+id/idBtnReadAllNotes"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="start|center"
            android:layout_margin="5dp"
            android:text="@string/back_to_list_button"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:drawableLeft="@drawable/arrow_back_24"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/idTvDateModified"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date_modified"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <!--Button to add a new note-->
        <!--
            (annulata2402, 2021)
            (Android Material Design Button Style Design | DigitalOcean, 2024). I didn't copy it directly but used the style widget
        -->
        <Button
            android:id="@+id/idBtnAddNote"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="end|center"
            android:layout_margin="5dp"
            android:text="@string/add_note_button"
            android:textAllCaps="false"
            android:textSize="12sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbarSize="20sp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:padding="5dp">

            <!--EditText for note title-->
            <EditText
                android:id="@+id/idEdtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/note_title_hint"
                android:textSize="24sp" />


            <!--EditText for note text-->
            <EditText
                android:id="@+id/idEdtText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/note_text_hint"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>


        </LinearLayout>


    </ScrollView>

</LinearLayout>